# BetterMan

./: .dockerignore  .env.example  .env.production  .env.production.example  .env.production.local  .env.supabase  .eslintrc.json  .gitignore  .prettierrc.json  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_DEPLOY_FIX.txt  COMMIT_FIX2.txt  COMMIT_FIX3.txt  COMMIT_FIX4.txt  COMMIT_FIX5.txt  COMMIT_FIX6.txt  COMMIT_FIX7.txt  COMMIT_FULL_FIX.txt  COMMIT_TAILWIND_FIX.txt  COMPREHENSIVE_LOADING.md  CONTRIBUTING.md  CSS_AND_DOCUMENT_FIXES.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile.dev  ENHANCED_VIEWER_FEATURES.md  FINAL_STATUS.md  FIXES_APPLIED.md  FRONTEND_FIX.md  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  (+69 more)
backend/: .env.example  .gitignore  API_ENDPOINTS.md  Dockerfile  Dockerfile.appplatform  Dockerfile.comprehensive  Dockerfile.extractor  Dockerfile.production  Dockerfile.sandbox  README.md  add_demo_manpages.py  alembic.ini  analyze_json_documents.py  backup_json_documents_20250608_070028.json  check_json_sections.py  cleanup_section_names.py  debug-man-pages.sh  deploy-manpage-service.sh  extract_host_manpages.sh  final_update_content.py  find_json_loader.py  generate_secrets.py  install-man-pages.sh  investigate_json_section.py  load_common_commands.py  load_manpages.py  load_real_manpages.sh  nixpacks.toml  parse_groff_files.py  populate_manpages_for_vercel.py  populate_test_data.py  process_loaded_manpages.py  pyproject.toml  pytest.ini  railway-cron.json  railway-extractor.toml  railway.json  railway.toml  requirements-dev.txt  requirements-extractor.txt  (+11 more)
backend/alembic/: env.py
backend/api/: index.py
backend/app/: main.py
backend/extracted_manpages/: cat.1.plain  column.1.plain  cp.1.plain  diff.1.plain  dirname.1.plain  echo.1.formatted  echo.1.plain  ed.1.plain  file.1.plain  find.1.plain  git.1.plain  head.1.formatted  head.1.plain  join.1.formatted  join.1.plain  less.1.plain  ln.1.formatted  (+17 more)
ingestion/: README.md  pyproject.toml
(+1234 files in other folders)
