[project]
name = "betterman-backend"
version = "0.1.0"
description = "BetterMan backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "redis>=5.2.0",
  "sentry-sdk[fastapi]>=2.0.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing:skip-covered --cov-fail-under=60"
