[project]
name = "betterman-ingestion"
version = "0.1.0"
description = "BetterMan ingestion pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "pg8000>=1.31.0",
  "pydantic>=2.10.0",
  "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ingestion --cov-report=term-missing:skip-covered --cov-fail-under=60"
